# codex-research-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: codex-oss-application.md
src/search_local/: __init__.py  artifacts.py  cache.py  cli.py  config.py  llm.py  mcp_server.py  models.py  profiles.py  quality.py  redaction.py  research.py  subagents.py  util.py
src/search_local/adapters/: exa.py  google_cse.py  google_xmlstock.py
tests/: test_artifacts_redaction.py  test_exa_parser.py  test_llm_subagents.py  test_mcp_server.py  test_parser_complexity.py  test_profiles.py  test_quality_audit.py  test_query_profiles_complexity.py
